--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body {
-  background: blue;
-  color: black;
+  background: black;
+  color: white;
+}
+
+* {
+  text-align: center;
 }
 
 .img-div {
   width: 500px;
   margin: auto;
   border: 5px solid black;
+  background-color: blue;
 }
