--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+#main {
   background: black;
   color: white;
 }
@@ -23,9 +23,11 @@ body {
   padding: 20px 0px 5px 0px;
 }
 
-img {
+#image {
   margin: 50px 0px 5px 0px;
   border: 5px solid black;
+  max-width: 183px;
+  height: auto;
 }
 
 #img-caption {
