--- a/style.css
+++ b/style.css
@@ -8,9 +8,21 @@
 }
 
 #img-div {
-  width: 500px;
   margin: auto;
   background-color: blue;
+  width: 90%;
+}
+
+#image {
+  /* margin: 50px 0px 5px 0px; */
+  width: 90%;
+  max-width: 800px;
+  display: block;
+  margin: auto;
+}
+
+#img-caption {
+  padding: 0px 0px 10px 0px;
 }
 
 #tribute-info ul li {
@@ -23,13 +35,3 @@
   padding: 20px 0px 5px 0px;
 }
 
-#image {
-  margin: 50px 0px 5px 0px;
-  border: 5px solid black;
-  max-width: 183px;
-  height: auto;
-}
-
-#img-caption {
-  padding: 0px 0px 10px 0px;
-}
